--- a/src/main/resources/edu/wpi/cs3733/D22/teamZ/views/ExternalPatientTransportationRequest.fxml
+++ b/src/main/resources/edu/wpi/cs3733/D22/teamZ/views/ExternalPatientTransportationRequest.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import io.github.palexdev.materialfx.controls.MFXDatePicker?>
-<?import io.github.palexdev.materialfx.controls.MFXTextField?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import io.github.palexdev.materialfx.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 800;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.D22.teamZ.controllers.ExternalPatientTransportationRequestController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 800;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.D22.teamZ.controllers.ExternalPatientTransportationRequestController">
     <children>
         <Rectangle fx:id="warningBackground" arcHeight="5.0" arcWidth="5.0" fill="#bcbcbc" height="26.0" layoutX="15.0" layoutY="369.0" stroke="TRANSPARENT" strokeType="INSIDE" width="463.0" />
         <MFXButton id="backButton" fx:id="requestListButton" layoutX="561.0" layoutY="311.0" onAction="#onRequestListButtonClicked" prefHeight="48.0" prefWidth="188.0" style="-fx-background-color: #0075FF;" text="Request List" textFill="WHITE">
@@ -28,7 +25,7 @@
         <Label fx:id="patientIdLabel" layoutX="24.0" layoutY="123.0" prefHeight="17.0" prefWidth="158.0" styleClass="form-header" text="Patient ID" />
         <MFXTextField fx:id="patientIDField" floatMode="DISABLED" layoutX="22.0" layoutY="144.0" onKeyReleased="#validateButton" prefHeight="27.0" prefWidth="149.0" promptText="Enter patient ID" />
         <Label fx:id="destinationLabel" layoutX="24.0" layoutY="190.0" prefHeight="17.0" prefWidth="158.0" styleClass="form-header" text="Destination" />
-        <MFXButton fx:id="submitButton" layoutX="310.0" layoutY="335.0" onAction="#onSubmitButtonClicked" prefHeight="28.0" prefWidth="79.0" text="Submit" textFill="WHITE">
+        <MFXButton fx:id="submitButton" layoutX="310.0" layoutY="335.0" onAction="#onSubmitButtonClicked" styleClass="button" prefHeight="28.0" prefWidth="79.0" style="-fx-background-color: #0075FF;" text="Submit" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></MFXButton>
