--- a/src/main/resources/edu/wpi/cs3733/D22/teamZ/styles/ServiceRequestDefault.css
+++ b/src/main/resources/edu/wpi/cs3733/D22/teamZ/styles/ServiceRequestDefault.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Montserrat:wght@600&family=Open+Sans&display=swap');
 
-
 .root {
     -fx-background-color: #E5E5E5;
 }
@@ -11,7 +10,6 @@
     -fx-font-size: 14pt;
     -fx-text-fill: #000000;
 }
-
 
 .object-header {
     -fx-font-family: 'Palatino Linotype';
@@ -34,15 +32,7 @@
     -fx-text-fill: #7B7B7B;
 }
 
-.choice-header-floor {
-    -fx-font-family: 'Palatino Linotype';
-    -fx-font-weight: 200;
-    -fx-font-size: 10pt;
-    -fx-text-fill: #012d5A;
-}
-
-
-.button {
+.nav-button {
     -fx-font-family: 'SansSerif';
     -fx-font-weight: 500;
     -fx-font-size: 10pt;
@@ -52,84 +42,45 @@
     -fx-background-color: #0067B1;
 }
 
-.button-inv {
+.csv-button {
     -fx-font-family: 'SansSerif';
     -fx-font-weight: 500;
-    -fx-font-size: 9pt;
-    -fx-text-fill: #012d5A;
+    -fx-font-size: 10pt;
+    -fx-text-fill: #FFFFFF;
 
     -fx-background-radius: 2px;
-    -fx-background-color: #f6bd38;
-
+    -fx-background-color: #9D9D9D;
 }
 
-.landing-button {
+.exit-button {
     -fx-font-family: 'SansSerif';
-    -fx-font-weight: 700;
+    -fx-font-weight: 500;
     -fx-font-size: 10pt;
-    -fx-text-fill: #000000;
+    -fx-text-fill: #FFFFFF;
 
-
-    -fx-background-radius: 4px;
-    -fx-background-color: #FFFFFF;
+    -fx-background-radius: 2px;
+    -fx-background-color: #FF4343;
 }
 
-.button-pane:hover {
-
-    -fx-border-color: #012d5a;
-    -fx-border-width: 3pt;
-
-}
-
-.filter-button {
+.submit-button {
     -fx-font-family: 'SansSerif';
-    -fx-font-weight: 700;
-    -fx-font-size: 7.5pt;
-    -fx-text-fill: #000000;
-
-    -fx-background-radius: 0px;
-    -fx-background-color: #FFFFFF;
-}
-/*
-.medical-icon {
-    -fill: -blue;
-    -fx-shape: "M20,6h-4V4c0-1.1-0.9-2-2-2h-4C8.9,2,8,2.9,8,4v2H4C2.9,6,2,6.9,2,8v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V8 C22,6.9,21.1,6,20,6z M10,4h4v2h-4V4z M20,20H4V8h16V20z";
-}
-*/
-/*
-.menu-button {
-    -fx-font-family: 'SansSerif';
-    -fx-font-weight: 700;
+    -fx-font-weight: 500;
     -fx-font-size: 10pt;
+    -fx-text-fill: #FFFFFF;
 
-    -fx-background-color: transparent;
+    -fx-background-radius: 2px;
+    -fx-background-color: #9D9D9D;
 }
-*/
-.region-icon {
-    -fx-pref-width: 18;
-    -fx-pref-height: 18;
-    -fx-background-color: #000000;
-}
-/*
-.search-box {
+
+.reset-button {
     -fx-font-family: 'SansSerif';
-    -fx-font-weight: 600;
-    -fx-font-size: 9pt;
-    -fx-text-fill: #9D9D9D;
+    -fx-font-weight: 500;
+    -fx-font-size: 10pt;
+    -fx-text-fill: #FFFFFF;
 
-    -fx-border-width: 0px;
-
-    -fx-background-radius: 5px;
-    -fx-background-color: #FFFFFF;
-
-    -fx-effect: dropshadow(three-pass-box, #0000003F, 4, 0, 0, 4);
+    -fx-background-radius: 2px;
+    -fx-background-color: #FF4343;
 }
-*/
-/*
-.split-pane *.split-pane-divider {
-    -fx-padding: 1 0 1 0;
-}
-*/
 
 .mfx-text-field {
     -fx-font-family: 'SansSerif';
@@ -153,33 +104,9 @@
     -fx-border-width: 2px;
     -fx-border-color: #0067B1;
 }
-/*
-.mfx-password-field {
-    -fx-font-family: 'SansSerif';
-    -fx-font-weight: 600;
-    -fx-font-size: 9pt;
-    -fx-text-fill: #9D9D9D;
 
-    -fx-border-width: 0px;
+.mfx-date-picker {
 
-    -fx-background-radius: 5px;
-    -fx-background-color: #FFFFFF;
-
-    -fx-effect: dropshadow(three-pass-box, #0000003F, 4, 0, 0, 4);
-}
-*/
-.choice-box {
-    -fx-font-family: 'SansSerif';
-    -fx-font-weight: 600;
-    -fx-font-size: 9pt;
-    -fx-text-fill: #9D9D9D;
-
-    -fx-border-width: 0px;
-
-    -fx-background-radius: 5px;
-    -fx-background-color: #FFFFFF;
-
-    -fx-effect: dropshadow(three-pass-box, #0000003F, 4, 0, 0, 4);
 }
 
 .combo-box {
@@ -195,14 +122,7 @@
 
     -fx-effect: dropshadow(three-pass-box, #0000003F, 4, 0, 0, 4);
 }
-/*
-.mfx-radio-button {
-    -fx-font-family: 'SansSerif';
-    -fx-font-weight: 600;
-    -fx-font-size: 8pt;
-    -fx-text-fill: #7B7B7B;
-}
-*/
+
 .error-label {
     -fx-font-family: 'SansSerif';
     -fx-font-weight: 300;
@@ -210,56 +130,12 @@
     -fx-text-fill:  #ff4444;
 }
 
-/*.mfx-table-view {*/
-
-/*    -fx-alignment: center;*/
-
-/*}*/
-/*.mfx-table-column {*/
-/*    -fx-font-family: 'Montserrat';*/
-/*    -fx-font-weight: 700;*/
-/*    -fx-font-size: 12pt;*/
-/*    -fx-text-fill: #2e2e2e;*/
-
-/*    !*-fx-min-width: 81;*!*/
-/*    !*-fx-max-width: 81;*!*/
-
-/*    -fx-alignment: center;*/
-/*    -fx-text-alignment: center;*/
-
-/*    -fx-border-width: 0 0 0 0;*/
-/*    -fx-padding: 0 0 0 0;*/
-/*    -fx-border-color: #D2D2D2;*/
-/*}*/
-
-/*.mfx-table-row-cell {*/
-/*    -fx-font-family: 'Montserrat';*/
-/*    -fx-font-weight: 600;*/
-/*    -fx-font-size: 7pt;*/
-/*    -fx-text-fill: #7B7B7B;*/
-
-/*    !*-fx-min-width: 81;*!*/
-/*    !*-fx-max-width: 81;*!*/
-
-/*    -fx-alignment: center;*/
-
-/*    -fx-border-width: 0 0 0 0;*/
-/*    -fx-border-color: #D2D2D2;*/
-
-/*    -fx-padding: 0 0 0 0;*/
-/*}*/
-
-/*.mfx-table-row:selected {*/
-/*    -fx-background-color: #0075FF2F;*/
-/*}*/
-
-/*.mfx-table-column .mfx-icon-wrapper {*/
-/*    -fx-min-width: 0;*/
-/*    -fx-max-width: 0;*/
-
-/*    -fx-min-height: 0;*/
-/*    -fx-max-height: 0;*/
-/*}*/
+.success-label {
+    -fx-font-family: 'SansSerif';
+    -fx-font-weight: 300;
+    -fx-font-size: 8pt;
+    -fx-text-fill:  #0067B1;
+}
 
 .table-view {
     -fx-background-color: #FFFFFF;
@@ -306,37 +182,6 @@
     -fx-max-height: 0;
 }
 
-.dropdown-table-view {
-    -fx-background-color: #FFFFFF;
-    -fx-background-radius: 5px;
-
-    -fx-effect: none;
-}
-
-.dropdown-table-view:focused {
-    -fx-border-width: 100;
-}
-
-.dropdown-table-view .column-header {
-    -fx-font-family: 'Montserrat';
-    -fx-font-weight: 700;
-    -fx-font-size: 7.5pt;
-    -fx-text-fill: #000000;
-
-    -fx-background-color: #FFFFFF;
-    -fx-border-width: 1 1 0 0;
-    -fx-border-color: #D2D2D2;
-}
-
-
-.dropdown-table-view .filler {
-    -fx-min-width: 0;
-    -fx-max-width: 0;
-
-    -fx-min-height: 0;
-    -fx-max-height: 0;
-}
-
 .table-view *.scroll-bar:horizontal *.increment-button,
 .table-view *.scroll-bar:horizontal *.decrement-button {
     -fx-background-color: null;
@@ -354,45 +199,6 @@
     -fx-shape: null;
 }
 
-.map-window {
-    -fx-border-radius: 5px;
-    -fx-background-color: #F6F6F6;
-    -fx-background-radius: 5px;
-
-    -fx-effect: dropshadow(three-pass-box, #0000003F, 15, .55, 0, 4);
-}
-
-.dropdown-window {
-    -fx-border-radius: 5px;
-    -fx-background-color: #FFFFFF;
-    -fx-background-radius: 5px;
-
-    -fx-padding: 5px;
-
-    -fx-effect: dropshadow(three-pass-box, #0000003F, 15, .55, 0, 4);
-}
-
-.warning-window {
-    -fx-background-color: #FFFFFF;
-    -fx-background-radius: 5px;
-
-    -fx-effect: dropshadow(three-pass-box, #0000003F, 15, .55, 0, 4);
-}
-
-.dropdown-table-view .column-header-background .filler {
-    -fx-background-color: #FFFFFF;
-}
-
-.scroll-pane {
-    -fx-background-color: transparent;
-    -fx-border-width: 0;
-}
-
-.scroll-pane .viewport {
-    -fx-background-color: transparent;
-    -fx-border-width: 0;
-}
-
 /* Making the scroll bar pretty */
 .scroll-bar,
 .scroll-bar .decrement-arrow,
@@ -400,7 +206,6 @@
     -fx-pref-width: 0;
     -fx-pref-height: 0;
 }
-
 
 .scroll-bar:horizontal .increment-button,
 .scroll-bar:horizontal .decrement-button {
@@ -436,7 +241,6 @@
 }
 
 /*!* Customize ScrollBars *!*/
-
 .scroll-bar:horizontal .track {
     -fx-background-color: #C4C4C4;
     -fx-border-color: transparent;
@@ -465,13 +269,6 @@
     -fx-pref-height: 12;
     -fx-padding: 5 0.5 5 0.5;
 }
-
-/*.scroll-bar:horizontal {*/
-/*    -fx-background-color: transparent;*/
-/*    -fx-pref-width: 12;*/
-/*    -fx-pref-height: 12;*/
-/*    -fx-padding: 0.5 5 0.5 5;*/
-/*}*/
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
