--- a/src/main/resources/edu/wpi/cs3733/D22/teamZ/api/views/ExternalPatientTransportRequestList.fxml
+++ b/src/main/resources/edu/wpi/cs3733/D22/teamZ/api/views/ExternalPatientTransportRequestList.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 800;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.D22.teamZ.controllers.ExternalPatientTransportListController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 800;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.D22.teamZ.api.controllers.ExternalPatientTransportListController">
    <children>
       <Label id="FormLabel" fx:id="requestListLabel" layoutX="20.0" layoutY="14.0" prefHeight="25.0" prefWidth="747.0" styleClass="object-header" text="External Patient Transport Request List">
          <font>
