--- a/src/main/resources/edu/wpi/cs3733/D22/teamZ/api/views/ExternalPatientTransportationRequest.fxml
+++ b/src/main/resources/edu/wpi/cs3733/D22/teamZ/api/views/ExternalPatientTransportationRequest.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 800;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.D22.teamZ.controllers.ExternalPatientTransportationRequestController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 800;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.D22.teamZ.api.controllers.ExternalPatientTransportationRequestController">
     <children>
         <MFXButton id="backButton" fx:id="requestListButton" layoutX="561.0" layoutY="311.0" onAction="#onRequestListButtonClicked" prefHeight="48.0" prefWidth="188.0" styleClass="nav-button" text="Request List" textFill="WHITE">
          <font>
